# mcomms

./: .gitignore  CMakeLists.txt  README.md  protocol.md
console/: CMakeLists.txt
console/include/: CMakeLists.txt
console/src/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: CMakeLists.txt  clientHandler.h  clientmanager.h  printercontroller.h  printermonitor.h  printersmanager.h  signals.hpp  tijcontroller.h  tijmonitor.h  tijnotifier.h  tijobserver.h  tijprintercontroller.h  tijprintermonitor.h  tijviewer.h
core/include/jet/: CMakeLists.txt  jetcontroller.h  jetmonitor.h  jetnotifier.h  jetobserver.h  jetviewer.h
core/include/tij/: CMakeLists.txt  tijcontroller.h  tijmonitor.h  tijnotifier.h  tijobserver.h  tijviewer.h
core/src/: CMakeLists.txt  clientHandler.cpp  clientmanager.cpp  printercontroller.cpp  printermonitor.cpp  printersmanager.cpp  tijcontroller.cpp  tijmonitor.cpp  tijnotifier.cpp  tijobserver.cpp  tijprintercontroller.cpp  tijprintermonitor.cpp  tijviewer.cpp
core/src/jet/: CMakeLists.txt  jetcontroller.cpp  jetmonitor.cpp  jetnotifier.cpp  jetobserver.cpp  jetviewer.cpp
core/src/test/: CMakeLists.txt  printersmanager_ut.cpp  tijprintercontroller_ut.cpp  tijprintermonitor_ut.cpp
core/src/tij/: CMakeLists.txt  tijcontroller.cpp  tijmonitor.cpp  tijnotifier.cpp  tijobserver.cpp  tijviewer.cpp
core/unittest/: CMakeLists.txt  main.cpp
emulators/tij/: CMakeLists.txt
emulators/tij/include/: CMakeLists.txt  tijemulator.h
emulators/tij/src/: CMakeLists.txt  emulatorwindow.cpp  emulatorwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  tijemulator.cpp
network/: CMakeLists.txt  README.md
network/include/: CMakeLists.txt
network/include/network/: isocket.h  network.h  networknode.h  networknotifier.h  networkobserver.h  nodenotifier.h  nodeobserver.h  tcpsocket.h  unixsocket.h
network/src/: CMakeLists.txt  abstractsocket.cpp  network.cpp  networknode.cpp  networknotifier.cpp  networkobserver.cpp  nodenotifier.cpp  nodeobserver.cpp  socketsfactory.cpp  socketsfactory.h  tcpsocket.cpp  tcpsocket.h  udpsocket.cpp  udpsocket.h  unixsocket.cpp  unixsocket.h  winsocket.cpp  winsocket.h
network/src/test/: CMakeLists.txt  abstractsocket_ut.cpp  loremipsum.h  network_ut.cpp  networknode_ut.cpp  nodeobserver_ut.cpp  server_moc.cpp  server_moc.h  socket_moc.cpp  socket_moc.h
network/unittest/: CMakeLists.txt
printers/: CMakeLists.txt
printers/include/: CMakeLists.txt
printers/include/jet/: CMakeLists.txt  datatypes.h  jetboard.h  jetcomms.h  jetio.h  jetlog.h  jetprinter.h  messagemanager.h  printhead.h
printers/include/jetprotocol/: CMakeLists.txt  jetcommand.h  jetcommands.h  jetcommandsfactory.h  jetconfig.h  jetconfigbase.h  jetcounters.h  jetfiles.h  jetlogs.h  jetmessages.h  jetmessagevalues.h  jetnisx.h  jetoutput.h  jetpause.h  jetprotocol.h  jetsingleconfig.h  jetsinglestatus.h  jetstatus.h  jetversions.h
printers/include/mprotocol/: CMakeLists.txt  mcommands.h  mcommandsfactory.h  mconfig.h  mconfigbase.h  mconfigbase.h.autosave  merrorslogs.h  mfiles.h  mlive.h  mmessagevalues.h  mprotocol.h  mstatus.h  mupdate.h
printers/include/nisx/: CMakeLists.txt  counter.h  datetime.h
printers/include/printer/: CMakeLists.txt  bcdtable.h  board.h  cartridge.h  comms.h  configuration.h  datatypes.h  datecodes.h  encoder.h  errors.h  files.h  ifilesmanager.h  inputs.h  iobase.h  messagemanager.h  outputs.h  printer.h  printerTypes.h  shotmode.h  status.h  tijprinter.h
printers/include/tij/: CMakeLists.txt  datatypes.h  messagemanager.h  tijcomms.h  tijprinter.h
printers/include/xmlprotocol/: CMakeLists.txt  xmlcommands.h
printers/jet/: CMakeLists.txt
printers/jet/include/: CMakeLists.txt
printers/jet/src/: CMakeLists.txt  jetboard.cpp  jetcomms.cpp  jetio.cpp  jetlog.cpp  jetprinter.cpp  messagemanager.cpp  printhead.cpp
printers/jetprotocol/: CMakeLists.txt  jetcommandsfactory.cpp  jetprotocol.cpp
printers/jetprotocol/commands/: CMakeLists.txt  jetcommand.cpp  jetcommands.cpp  jetconfig.cpp  jetconfigbase.cpp  jetcounters.cpp  jetfiles.cpp  jetlogs.cpp  jetmessages.cpp  jetmessagevalues.cpp  jetnisx.cpp  jetoutput.cpp  jetpause.cpp  jetsingleconfig.cpp  jetsinglestatus.cpp  jetstatus.cpp  jetversions.cpp
printers/jetprotocol/test/: CMakeLists.txt
printers/labels/: CMakeLists.txt
printers/labels/nisx/: CMakeLists.txt  counter.cpp  datetime.cpp
printers/mprotocol/: CMakeLists.txt  mcommandsfactory.cpp  mprotocol.cpp
printers/mprotocol/commands/: CMakeLists.txt  mboard.cpp  mboard.h  (+15 more)
printers/src/: CMakeLists.txt  bcdtable.cpp  board.cpp  cartridge.cpp  comms.cpp  configuration.cpp  datecodes.cpp  encoder.cpp  errors.cpp  files.cpp  inputs.cpp  iobase.cpp  messagemanager.cpp  outputs.cpp  printer.cpp  shotmode.cpp  status.cpp  tijprinter.cpp
printers/tij/: CMakeLists.txt
printers/xmlprotocol/: CMakeLists.txt  xmlcommands.cpp
src/: CMakeLists.txt  core.cpp  tijprintercontroller.cpp  tijprintercontroller.h
src/test/: CMakeLists.txt
tools/: CMakeLists.txt  tools.cmake
tools/signals/: CMakeLists.txt  SimpleSignal.h  signals.hpp  simplesignal.hpp
ui/: CMakeLists.txt  deploy_all.sh
ui/include/: CMakeLists.txt  jetconfigview.h  jetfilesview.h  jetmsgmanager.h  jetstatusview.h  jetview.h  mainwindow.h  messageselector.h  networkdialog.h  printerConnDialog.h  printercommsview.h  printerconfigview.h  printerconndialog.h  printerfilesview.h  printerslistmodel.h  printerstatusview.h  printerview.h  tijcommsview.h  tijconfigview.h  tijfilesview.h  tijmessageselector.h  tijstatusview.h  tijview.h
ui/resources/: CMakeLists.txt  icons.qrc
ui/src/: CMakeLists.txt  jetconfigview.cpp  jetfilesview.cpp  jetmsgmanager.cpp  jetstatusview.cpp  jetview.cpp  main.cpp  mainwindow.cpp  messageselector.cpp  networkdialog.cpp  printerConnDialog.cpp  printercommsview.cpp  printerconfigview.cpp  printerconndialog.cpp  printerfilesview.cpp  printerslistmodel.cpp  printerstatusview.cpp  printerview.cpp  tijcommsview.cpp  tijconfigview.cpp  tijfilesview.cpp  tijmessageselector.cpp  tijstatusview.cpp  tijview.cpp
(+60 files in other folders)
